# procenv

./: .gitignore  Cargo.toml  README.md
.config/: nextest.toml
.github/workflows/: ci.yml
crates/procenv/: Cargo.toml
crates/procenv/benches/: config_loading.rs
crates/procenv/data/: complex_config.json  complex_config.toml  complex_config.yaml  config.json  config.yaml  config.yml
crates/procenv/examples/: basic.rs  comparison_config_rs.rs  comparison_figment.rs  complex_flatten.rs  custom_provider.rs  dotenv_example.rs  env_example_gen.rs  file_config.rs  file_config_sketch.rs  flatten_example.rs  hot_reload.rs  prefix_example.rs  runtime_access.rs  secrecy_example.rs  serde_free.rs  source_attribution.rs  source_attribution_dotenv.rs  test_type_mismatch.rs  validator_example.rs
crates/procenv/src/: diagnostic_codes.rs  error.rs  file.rs  lib.rs  loader.rs  source.rs  validation.rs  value.rs
crates/procenv/src/file/: builder.rs  error.rs  format.rs  mod.rs  origin.rs  utils.rs
crates/procenv/src/provider/: adapter.rs  dotenv.rs  env.rs  file.rs  mod.rs
crates/procenv/src/watch/: types.rs  watcher.rs
crates/procenv/tests/: cli_tests.rs  concurrency_tests.rs  error_quality.rs  integration.rs  malformed_files.rs  nested_complex.rs  profile_tests.rs  property_tests.rs  provider.rs  runtime_access.rs  serde_free.rs  source_tracking.rs  trybuild.rs  validation.rs
crates/procenv/tests/compile_fail/: default_and_optional_conflict.rs  default_and_optional_conflict.stderr  duplicate_option.rs  duplicate_option.stderr  enum_not_supported.rs  enum_not_supported.stderr  missing_env_attribute.rs  missing_env_attribute.stderr  missing_var_option.rs  missing_var_option.stderr  optional_requires_option_type.rs  optional_requires_option_type.stderr  tuple_struct_not_supported.rs  tuple_struct_not_supported.stderr  union_not_supported.rs  union_not_supported.stderr  unit_struct_not_supported.rs  unit_struct_not_supported.stderr  unknown_option.rs  unknown_option.stderr
crates/procenv/tests/compile_pass/: all_features.rs  basic_required.rs  cli_args.rs  env_example_gen.rs  optional_field.rs  prefix_support.rs  profile_support.rs  secret_field.rs  serde_format.rs  serde_format_semantics.rs  source_attribution.rs  source_attribution_nested.rs  various_types.rs  with_default.rs
crates/procenv_macro/: Cargo.toml
crates/procenv_macro/src/: expand.rs  field.rs  lib.rs  parse.rs
crates/procenv_macro/src/expand/: args.rs  config.rs  env.rs  mod.rs  runtime.rs  validation.rs
crates/procenv_macro/src/field/: default.rs  flatten.rs  mod.rs  optional.rs  required.rs  secret.rs
