[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.5"
edition = "2024"
rust-version = "1.91.1"

[workspace.dependencies]
syn = { version = "2.0.111", features = ["full", "parsing", "extra-traits"] }
quote = "1.0.42"
proc-macro2 = "1.0.103"

miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"

secrecy = { version = "0.10.3", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
validator = { version = "0.20.0", features = ["derive"] }

serde-saphyr = "0.0.10"
tracing = "0.1.43"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_path_to_error = { version = "0.1.20" }
serde_json = "1.0.145"
toml = "0.9.8"
tokio = { version = "1.48.0", features = ["rt"] }
futures = { version = "0.3.31" }
divan = { version = "0.1.21" }
